--- a/vignettes/Development/TestingMassBalance.Rmd
+++ b/vignettes/Development/TestingMassBalance.Rmd
@@ -17,14 +17,7 @@ knitr::opts_knit$set(root.dir = projectRoot)
 
 ## Initiation
 
-We assume you have the input data for a substance or material of interest and all the data describing the SimpleBox world to be created ready and thus can run the initWorld script.
 
-```{r message=FALSE, warning=FALSE, paged.print=TRUE}
-library(dplyr)
-source("baseScripts/initWorld_onlyParticulate.R")
-World$NewSolver("SB1Solve")
-
-```
 
 ```{r solver}
 
@@ -91,103 +84,302 @@ Emissions_avg <- Emissions[-nrow(Emissions), ]
 
 average_emission <- mean(Emissions_avg$Emission_mean[7:23], na.rm = TRUE)
 print(average_emission)
-emissions <- data.frame(Abbr = "w1CS", 
+emissions <- data.frame(Abbr = "w1CU", 
                         Emis = average_emission)
 emissions$Emis<- emissions$Emis * 1000 / (365.25 * 24 * 60 * 60) # convert 1 t/y to si units: kg/s
 ```
-
 ```{r Solving}
-SolutionSteady <- World$Solve(emissions)
-SolutionSteady <- SolutionSteady |>
-  filter(Species != "Unbound")
+# substance <- "nC60_10nm"
+# source("baseScripts/initWorld_onlyParticulate.R")
+# SolutionSteady <- World$Solve(emissions)
+# SolutionSteady <- SolutionSteady |>
+#   filter(Species != "Unbound")
+# 
+```
+
+```{r list}
+# Define the list of substances
+#substances <- c("nC60_10nm", "nAg_10nm", "nZnO")  # Add all the substances you want to process "1-aminoanthraquinone", # no class
+substances <- c(
+                          "1-HYDROXYANTHRAQUINONE", # acid
+                          "1-Hexadecanamine, N,N-dimethyl-", # base
+                          "1-Chloro-2-nitro-propane", 
+                          "Zn(II)", 
+                          "Be(II)", 
+                          "FUMARIC ACID", 
+                          "Closantel"
+) # neutral
+# Define the list of solvers
+solvers <- c("SBsteady", "SB1Solve")
+
+# Initialize an empty list to store results
+results_list <- list()
+
+# Loop through each substance and each solver
+for (solver in solvers) {
+  for (substance in substances) {
+    # Print the current substance and solver (optional)
+    cat("Processing substance:", substance, "with solver:", solver, "\n")
+    
+    # Initialize the world with the current substance
+    source("baseScripts/initWorld_onlyMolec.R")
+    World$NewSolver(solver)
+  
+    # Solve for the steady solution
+    SolutionSteady <- World$Solve(emissions)
+    
+    # Add a column for the substance and solver
+    SolutionSteady$Substance <- substance
+    SolutionSteady$Solver <- solver
+    
+    # Append the results to the list
+    results_list[[paste(substance, solver, sep = "_")]] <- SolutionSteady
+  }
+}
+
+# Combine all results into a single dataframe
+SolutionSteady_all <- do.call(rbind, results_list)
+
+
+
+
 
 ```
 
+```{r Mass Balance Check for 1}
+# unique_combinations <- SolutionSteady |>
+#   select(Scale, SubCompart, Species) |>
+#   distinct()
+# emission_rows <- unique_combinations |>
+#   mutate(
+#     Value = "emission",
+#     EqMass = if_else(Scale == "Continental" & SubCompart == "river" & Species == "Solid", emissions$Emis, 0)
+#   )
+# 
+# #adding "from" and "to" acronyms to the R K matrix
+# kaas <- as_tibble(World$kaas)
+# kaas <- kaas |>
+#   filter(fromSpecies != "Unbound")
+# kaas <- kaas |>
+#   left_join(SolutionSteady, by = c("fromScale" = "Scale", "fromSubCompart" = "SubCompart", "fromSpecies" = "Species"))
+# 
+# # Multiply k by the corresponding EqMass
+# kaas <- kaas |>
+#   mutate(k = k * EqMass)
+# kaas <- kaas |>
+#   mutate(k = if_else(fromSubCompart == toSubCompart &
+#                        fromScale == toScale &
+#                        fromSpecies == toSpecies,
+#                      -abs(k),
+#                      k))
+# print(kaas)
+# unique(kaas$fromScale)
+# unique(kaas$fromSubCompart)
+# print(kaas)
+# 
+# aggregated_to <- kaas |>
+#   group_by(toScale, toSubCompart, toSpecies) |>
+#   summarise(k_sum_to = sum(k)) |> 
+#   ungroup()
+# 
+# # Aggregate k values based on fromScale, fromSubCompart, and fromSpecies
+# aggregated_from <- kaas |>
+#   filter(k>=0) |>
+#   group_by(fromScale, fromSubCompart, fromSpecies) |>
+#   summarise(k_sum_from = sum(k)) |>
+#   ungroup()
+# 
+# new_rows_from <- aggregated_from |>
+#   mutate(
+#     Value = paste("transportfrom"),
+#     Scale = fromScale,
+#     SubCompart = fromSubCompart,
+#     Species = fromSpecies,
+#     EqMass = k_sum_from
+#   ) |>
+#   select(Value, Scale, SubCompart, Species, EqMass)
+# 
+# new_rows_to <- aggregated_to |>
+#   mutate(
+#     Value= paste("transportto"),
+#     Scale = toScale,
+#     SubCompart = toSubCompart,
+#     Species = toSpecies,
+#     EqMass = k_sum_to
+#   ) |>
+#   select(Value, Scale, SubCompart, Species, EqMass)
+# 
+# # Combine SolutionSteady with new rows
+# massbalancecheck <- bind_rows(new_rows_from, new_rows_to, emission_rows)
+# print(massbalancecheck)
+# 
+# massbalancecheck_sorted <- massbalancecheck |>
+#   arrange(Scale, SubCompart, Species)
+# 
+# massbalance_difference <- massbalancecheck_sorted |>
+#   pivot_wider(names_from = Value, values_from = EqMass) |>
+#   mutate(difference = transportto + emission - transportfrom ) |>
+#   select(Scale, SubCompart, Species, difference) 
+# 
+# print(massbalance_difference)
+# 
+# total_abs_difference <- sum(abs(massbalance_difference$difference), na.rm = TRUE)
+# print(total_abs_difference)
+# 
+# # Find the row with the largest value in the EqMass column
+# max_row_index <- which.max(massbalance_difference$difference)
+# max_row <- massbalance_difference[max_row_index, ]
+# 
+# # Print the row with the largest EqMass value
+# print(max_row)   
+```
 
-```{r Mass Balance Check}
-unique_combinations <- SolutionSteady |>
-  select(Scale, SubCompart, Species) |>
-  distinct()
-emission_rows <- unique_combinations |>
-  mutate(
-    Value = "emission",
-    EqMass = if_else(Scale == "Continental" & SubCompart == "river" & Species == "Solid", emissions$Emis, 0)
-  )
+```{r mass balance checks}
+# Initialize lists and data frames
+mass_balance_results <- list()
+total_abs_differences <- data.frame(Substance = character(), Solver = character(), TotalAbsDifference = numeric(), stringsAsFactors = FALSE)
+top_rows_list <- list()
+total_mass_difference_list <- list()
+# Loop over substances 
+for (substance in substances) {
+  cat("Processing mass balance for substance:", substance, "\n")
+  
+  # Loop over solvers
+  for (solver in solvers) {
+    cat("  Using solver:", solver, "\n")
+    
+    # Access SolutionSteady from results_list
+    key <- paste(substance, solver, sep = "_")
+    SolutionSteady <- results_list[[key]]
+    # SolutionSteady <- SolutionSteady |>
+    #   filter(Species != "Unbound")
+    
+    # Create unique combinations
+    unique_combinations <- SolutionSteady |>
+      select(Scale, SubCompart, Species) |>
+      distinct()
+    
+    # Create emission rows
+    emission_rows <- unique_combinations |>
+      mutate(
+        Value = "emission",
+        EqMass = if_else(Scale == "Continental" & SubCompart == "river" & Species == "Solid", emissions$Emis, 0)
+      )
+    
+    # Adding "from" and "to" acronyms to the R K matrix
+    kaas <- as_tibble(World$kaas)
+    # kaas <- kaas |>
+    #   filter(fromSpecies != "Unbound")
+    kaas <- kaas |>
+      left_join(SolutionSteady, by = c("fromScale" = "Scale", "fromSubCompart" = "SubCompart", "fromSpecies" = "Species"))
+    
+    # Multiply k by the corresponding EqMass
+    kaas <- kaas |>
+      mutate(k = k * EqMass)
+    kaas <- kaas |>
+      mutate(k = if_else(fromSubCompart == toSubCompart &
+                           fromScale == toScale &
+                           fromSpecies == toSpecies,
+                         -abs(k),
+                         k))
+    
+    # Aggregate k values based on toScale, toSubCompart, and toSpecies
+    aggregated_to <- kaas |>
+      group_by(toScale, toSubCompart, toSpecies) |>
+      summarise(k_sum_to = sum(k)) |>
+      ungroup()
+    
+    # Aggregate k values based on fromScale, fromSubCompart, and fromSpecies
+    aggregated_from <- kaas |>
+      filter(k >= 0) |>
+      group_by(fromScale, fromSubCompart, fromSpecies) |>
+      summarise(k_sum_from = sum(k)) |>
+      ungroup()
+    
+    new_rows_from <- aggregated_from |>
+      mutate(
+        Value = "transportfrom",
+        Scale = fromScale,
+        SubCompart = fromSubCompart,
+        Species = fromSpecies,
+        EqMass = k_sum_from
+      ) |>
+      select(Value, Scale, SubCompart, Species, EqMass)
+    
+    new_rows_to <- aggregated_to |>
+      mutate(
+        Value = "transportto",
+        Scale = toScale,
+        SubCompart = toSubCompart,
+        Species = toSpecies,
+        EqMass = k_sum_to
+      ) |>
+      select(Value, Scale, SubCompart, Species, EqMass)
+    
+    # Combine SolutionSteady with new rows
+    massbalancecheck <- bind_rows(new_rows_from, new_rows_to, emission_rows)
+    
+    massbalancecheck_sorted <- massbalancecheck |>
+      arrange(Scale, SubCompart, Species)
+    
+    # Check differences
+    massbalance_difference <- massbalancecheck_sorted |>
+      pivot_wider(names_from = Value, values_from = EqMass) |>
+      mutate(difference = transportto + emission - transportfrom) |>
+      select(Scale, SubCompart, Species, difference)
+    
+    total_abs_difference <- sum(abs(massbalance_difference$difference), na.rm = TRUE)
+    total_mass_difference <- sum(massbalance_difference$difference, na.rm = TRUE)
+    
+    # Add columns for substance and solver
+    massbalance_difference$Substance <- substance
+    massbalance_difference$Solver <- solver
+    
+    # Print largest differences
+    top_5_rows <- massbalance_difference |>
+      arrange(desc(abs(difference))) |>
+      head(5)
+    
+    # Append the results to the lists
+    mass_balance_results[[key]] <- massbalance_difference
+    total_abs_differences <- rbind(total_abs_differences, data.frame(Substance = substance, Solver = solver, TotalAbsDifference = total_abs_difference))
+    top_rows_list[[key]] <- top_5_rows
+    total_mass_difference_list[[key]] <- total_mass_difference
+  }  # End of solver loop
+  
+}  # End of substance loop
 
-#adding "from" and "to" acronyms to the R K matrix
-kaas <- as_tibble(World$kaas)
-kaas <- kaas |>
-  filter(fromSpecies != "Unbound")
-kaas <- kaas |>
-  left_join(SolutionSteady, by = c("fromScale" = "Scale", "fromSubCompart" = "SubCompart", "fromSpecies" = "Species"))
+# Combine all mass balance results into a single dataframe
+massbalance_difference_all <- do.call(rbind, mass_balance_results)
+top_rows_all <- do.call(rbind, top_rows_list)
 
-# Multiply k by the corresponding EqMass
-kaas <- kaas |>
-  mutate(k = k * EqMass)
-kaas <- kaas |>
-  mutate(k = if_else(fromSubCompart == toSubCompart &
-                       fromScale == toScale &
-                       fromSpecies == toSpecies,
-                     -abs(k),
-                     k))
-print(kaas)
-unique(kaas$fromScale)
-unique(kaas$fromSubCompart)
-print(kaas)
+# Print the combined results (optional)
+print(massbalance_difference_all)
+print(top_rows_all)
 
-aggregated_to <- kaas |>
-  group_by(toScale, toSubCompart, toSpecies) |>
-  summarise(k_sum_to = sum(k)) |> 
-  ungroup()
+library(ggplot2)
+ggplot(total_abs_differences, aes(x = Substance, y = TotalAbsDifference, fill = Solver)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(title = "Total Absolute Differences by Substance and Solver", x = "Substance", y = "Total Absolute Difference [kg]") +
+  theme_minimal()
 
-# Aggregate k values based on fromScale, fromSubCompart, and fromSpecies
-aggregated_from <- kaas |>
-  filter(k>=0) |>
-  group_by(fromScale, fromSubCompart, fromSpecies) |>
-  summarise(k_sum_from = sum(k)) |>
-  ungroup()
+# Plotting the mass balance differences
+ggplot(massbalance_difference_all, aes(x = interaction(Scale, SubCompart, Species), y = difference, fill = Substance)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  facet_wrap(~ Solver, scales = "free", ncol = 2) +
+  labs(title = "Mass Balance Differences by Scale, SubCompart, and Species", x = "Combination (Scale, SubCompart, Species)", y = "Difference [kg]") +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  theme_minimal()
 
-new_rows_from <- aggregated_from |>
-  mutate(
-    Value = paste("transportfrom"),
-    Scale = fromScale,
-    SubCompart = fromSubCompart,
-    Species = fromSpecies,
-    EqMass = k_sum_from
-  ) |>
-  select(Value, Scale, SubCompart, Species, EqMass)
+top_rows_all$Substance <- factor(top_rows_all$Substance, levels = unique(top_rows_all$Substance))
+top_rows_all$Solver <- factor(top_rows_all$Solver, levels = unique(top_rows_all$Solver))
 
-new_rows_to <- aggregated_to |>
-  mutate(
-    Value= paste("transportto"),
-    Scale = toScale,
-    SubCompart = toSubCompart,
-    Species = toSpecies,
-    EqMass = k_sum_to
-  ) |>
-  select(Value, Scale, SubCompart, Species, EqMass)
 
-# Combine SolutionSteady with new rows
-massbalancecheck <- bind_rows(new_rows_from, new_rows_to, emission_rows)
-print(massbalancecheck)
-
-massbalancecheck_sorted <- massbalancecheck |>
-  arrange(Scale, SubCompart, Species)
-
-massbalance_difference <- massbalancecheck_sorted |>
-  pivot_wider(names_from = Value, values_from = EqMass) |>
-  mutate(difference = transportto + emission - transportfrom ) |>
-  select(Scale, SubCompart, Species, difference) 
-
-print(massbalance_difference)
-
-total_abs_difference <- sum(abs(massbalance_difference$difference), na.rm = TRUE)
-print(total_abs_difference)
-
-# Find the row with the largest value in the EqMass column
-max_row_index <- which.max(massbalance_difference$difference)
-max_row <- massbalance_difference[max_row_index, ]
-
-# Print the row with the largest EqMass value
-print(max_row)   
+# Plotting the top differences as grouped bars with facets for solvers
+ggplot(top_rows_all, aes(x = interaction(SubCompart, Scale, Species), y = difference, fill = Substance)) +
+  geom_bar(stat = "identity", position = "dodge", width = 0.4) +
+  labs(title = "Top Differences by Compartment, Scale, and Species", x = "Combination (Compartment, Scale, Species)", y = "Difference [kg]", fill = "Substance") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  facet_wrap(~ Solver, scales = "free", ncol = 2)
 ```
